[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/UI/SpaceUIOverview.tres" type="StyleBox" id=1]
[ext_resource path="res://source/UI/RefiningPopup.gd" type="Script" id=2]

[node name="RefiningPopup" type="PopupDialog"]
margin_right = 450.0
margin_bottom = 200.0
popup_exclusive = true
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 450.0
margin_bottom = 50.0
text = "  Refinery"

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 450.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
step = 1.0

[node name="CargoandRefine" type="Label" parent="Panel/VBoxContainer"]
margin_top = 108.0
margin_right = 450.0
margin_bottom = 139.0
text = "  Cargo Hold: Veldspar 999999 m3
  Estimated Tritanium: 9999 m3"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 143.0
margin_right = 450.0
margin_bottom = 163.0
alignment = 1

[node name="RefineButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 240.0
margin_bottom = 20.0
text = "REFINE ORE"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 244.0
margin_right = 296.0
margin_bottom = 20.0
text = "CLOSE"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/RefineButton" to="." method="_on_RefineButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
